--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,11 @@
             <input type="submit">
         </form>
 
-        {{results}}
+
+        <ul>
+        	{% for i in results %}
+        		<li>{{i}}</li>
+        	{%endfor%}
+        </ul>
     </body>
 </html>
